# sam

./: .gitignore  .gitmodules  Makefile  README.md  README_memory_model.txt  asplos_benchmarks.md  count_nnz_tiling.py  datastructure_suitesparse.py  environment.yml  environment_ci.yml  find_max_tilesize.py  generate_spmv_sparsity_sweep.py  matmul_ikj.py  matmul_kij.py  matmul_kji.py  maximum_tiling.py  memory_config.yaml  nnz_25k_50k.csv  nnz_5_10_25.csv  requirements.txt  setup.cfg  setup.py  setup_tiling_mat.py  setup_tiling_tensors.py  sparse_tile_flow.sh  spmv_iter_matrices.txt  spmv_sparsity_sweep.py  test_mat_unit_test_elem_mul.py  tile_accumulation.py  tile_pairing.py  vec_elemadd.py
.github/workflows/: makefile.yml  python-package-conda.yml
SUITESPARSE_FORMATTED/: script_switch_mode01_matrices.py
benchmarks/: suitesparse_valid.txt
compiler/: CMakeLists.txt  README.md  baseline.cpp  bench.cpp  bench.h  main.cpp  sam-kernels.sh  transformer-kernels.sh
compiler/baseline_cusparse/: Makefile  baseline_cusparse.cu
compiler/onyx/: hw_node.py  parse_dot.py
compiler/sam-outputs/dot/: mat_identity_dense.gv  mat_mask_tri_DA3_final.gv  mat_mask_tri_DA3sum_final.gv  mat_mask_tri_fiberwrite.gv  mat_mask_tri_partial.gv  mat_mattransmul.gv  mat_residual.gv  mat_sddmm.gv  mat_spacc_simple.gv  mat_vecmul_ij.gv  mat_vecmul_iter.gv  mat_vecmul_iter_short.gv  mat_vecmul_ji.gv  matmul_ikj.gv  matmul_ikj_hand_BLACKBOX.gv  matmul_jik.gv  matmul_jki.gv  matmul_kij.gv  matmul_kji.gv  tensor3_identity_dense.gv  tensor3_innerprod.gv  tensor3_website_expr.gv  vec_ds_compression_HAND.gv  vec_ds_compression_WRONG.gv  vec_sd_compression_HAND.gv  vec_sd_compression_WRONG.gv  vec_spacc_simple.gv  vec_sub.gv
compiler/sam-outputs/onyx-dot/: commits.md  concat_matmul.gv  concat_matmul_intersect.gv  fp_matmul_ijk.gv  fp_matmul_ijk_crddrop.gv  fp_spmm_ijk.gv  mat_dn2sp.gv  mat_elemadd.gv  mat_elemadd3.gv  mat_elemadd_leakyrelu_exp.gv  mat_elemadd_relu.gv  mat_elemdiv.gv  mat_elemmul.gv  mat_identity.gv  mat_mask_tri.gv  mat_mask_tri_DA3sum_final.gv  mat_mattransmul.gv  mat_residual.gv  mat_sddmm.gv  mat_sp2dn.gv  mat_vecmul_ij.gv  matmul_ijk.gv  matmul_ijk_crddrop.gv  matmul_ijk_crddrop_fp.gv  matmul_ijk_crddrop_relu.gv  matmul_ijk_crddrop_relu_fp.gv  matmul_ikj.gv  matmul_ikj_hand_BLACKBOX.gv  spm_dm_matmul.gv  spm_spm_dm_matmul.gv  spm_spm_spm_matmul.gv  spmm_ijk_crddrop.gv  spmm_ijk_crddrop_fp.gv  spmm_ijk_crddrop_relu.gv  spmm_ijk_crddrop_relu_fp.gv  spmv.gv  spmv_fp.gv  spmv_relu.gv  spmv_relu_fp.gv  tensor3_elemadd.gv  (+13 more)
compiler/sam-outputs/opal-dot/: masked_broadcast.gv  mat_elemadd_leakyrelu_exp.gv  matmul_ijk_crddrop_relu.gv  matmul_ijk_crddrop_relu_no_valdrop.gv
data/: README.md
data/other/: lp_scsd1-vec_mode1-0.001.tns
data/suitesparse/: bcsstm02.mtx  lp_scsd1.mtx
sam/: util.py
sam.egg-info/: PKG-INFO
sam/onyx/: REAME.md  asplos.py  block_tensors.py  fiber_tree.py  garnet_PE.v  generate_matrices.py  hw_node.py  matmul_ikj_hacked.gv  parse_dot.py  parse_dot_saved.py  suitesparse.py  util.py
sam/sim/: reorder.py
scripts/: @  README.md  \  advanced_simulator_runner.sh  artifact_docker_copy.py  bench_csv_aggregator.py  blocking_visualization.ipynb  checker_diff.sh  clean_memory_model.sh  collect_node_counts.py  converter.py  datastructure_frostt.py  datastructure_suitesparse.py  datastructure_suitesparse_fortensorapps.py  datastructure_tns.py  datastructure_tns_backup_7_16_23.py  datastructure_tns_old.py  divvy_runs.py  download_frostt.sh  download_suitesparse2.sh  download_suitesparse3.sh  download_suitesparse_stream_overhead.sh  download_unpack_format_suitesparse.sh  ext_runner.sh  few_points_memory_model_runner.sh  few_points_model_runner.sh  frostt_and_rand_runner.sh  frostt_runner.sh  frostt_runner_copy.sh  full_ext_runner.sh  full_memory_model_runner.sh  full_memory_model_runner2.sh  generate_frostt_formats.sh  generate_frostt_formats_onyx.sh  generate_full_tiled_output.py  generate_gold_matmul_tiled.py  generate_sparsity_sweep_mem_model.sh  generate_suitesparse_formats.sh  generate_synthetics.sh  get-arr-len.py  (+59 more)
scripts/artifact/: README.md  artifact_docker_copy.py  collect_node_counts.py  plot_memory_model.py  stream_overhead.sh
scripts/formatting/: README.md  datastructure_sparse_ml.py  datastructure_suitesparse.py  datastructure_tns.py  download_unpack_format_suitesparse.sh  generate_frostt_formats.sh  generate_frostt_formats_onyx.sh  generate_sparse_ml_formats.py  generate_suitesparse_formats.sh  generate_tensor_tile_formats_onyx.sh
scripts/gen_sam_apps/: README.md  test_generating_code.py
scripts/get_data/: README.md  download_frostt.sh  download_suitesparse.sh  unpack_suitesparse.sh  unpack_suitesparse_all.sh
scripts/logs/: out.csv  overall_out.csv
scripts/run_cpu/: README.md  frostt_runner.sh  frostt_runner_copy.sh  frostt_runner_taco.sh  frostt_runner_taco_gpu.sh  frostt_runner_taco_omp.sh  frostt_runner_taco_unsched.sh  parse_cpu_results_matrixapps.py  parse_cpu_results_tensorapps.py  suitesparse_runner.sh  suitesparse_runner_taco.sh
scripts/run_gpu/: run_cusparse_suitesparse.sh
scripts/run_onyx/: README.md  sam_hw_suitesparse_runner.sh
scripts/run_sam_sim/: README.md  pytest_frostt.sh  pytest_frostt_with_benchmarks.sh  pytest_suitesparse.sh  pytest_suitesparse_with_benchmarks.sh  run_suitesparse.sh  run_suitesparse_final.sh  run_suitesparse_generated.sh  run_synthetics.sh  sam_frostt_runner.sh  sam_suitesparse_runner.sh  sam_suitesparse_runner_sddmmonly.sh  suitesparse_validator.sh
scripts/stats/: README.md  get_tensor_arrlen.py  suitesparse_stats.py  suitesparse_stats.sh
scripts/tensor_names/: README.md  frostt_valid_all.txt  get_benchmark_data.py  onyx_eval_final.txt  onyx_eval_final_frostt_only.txt  onyx_eval_final_suitesparse_only.txt  onyx_final.txt  suitesparse_ci.txt  suitesparse_valid_all.txt  suitesparse_valid_large50.txt  suitesparse_valid_mid50.txt  suitesparse_valid_small50.txt  temp_0.txt  temp_12.txt  temp_13.txt  temp_15.txt  temp_16.txt  (+5 more)
sim/: __init__.py  primitive.py  requirements.txt  sim.py  test.py  test_rd_scan.py
(+454 files in other folders)
